Extended account, entityBase and more